--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.twilio</groupId>
   <artifactId>guardrail-maven-plugin</artifactId>
-  <version>0.34.0-SNAPSHOT</version>
+  <version>0.34.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>Guardrail Maven Plugin</name>
@@ -26,7 +26,7 @@
     <plexus-utils.version>3.0.24</plexus-utils.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>2.12.4</scala.version>
-    <guardrail.version>0.34.0</guardrail.version>
+    <guardrail.version>0.34.1</guardrail.version>
   </properties>
 
   <repositories>
