Adding settings.xml

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ before_install:
   fi
 after_success:
 - if [ $TRAVIS_PULL_REQUEST = 'false' ] && [[ "$TRAVIS_TAG" = v* ]]; then
-    mvn clean deploy -Possrh -Ddeploy.username="${SONATYPE_USERNAME}" -Ddeploy.password="${SONATYPE_PASSWORD}" -Dgpg.passphrase="${PGP_PASS}" -Darguments=-Dgpg.keyname="${PGP_KEYID}";
-    mvn clean deploy -Pbintray -Ddeploy.username="${BINTRAY_USERNAME}" -Ddeploy.password="${BINTRAY_PASS}" -Dgpg.passphrase="${PGP_PASS}" -Darguments=-Dgpg.keyname="${PGP_KEYID}";
+    mvn clean deploy -Possrh --settings settings.xml;
+    mvn clean deploy -Pbintray --settings settings.xml;
   fi
