--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ before_install:
   fi
 after_success:
 - if [ $TRAVIS_PULL_REQUEST = 'false' ] && [[ "$TRAVIS_TAG" = v* ]]; then
-    mvn clean deploy -Possrh --settings settings.xml;
+    mvn clean deploy close release -Possrh --settings settings.xml;
     mvn clean deploy -Pbintray --settings settings.xml;
   fi
