--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven-artifact-transfer.version>0.11.0</maven-artifact-transfer.version>
     <maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
     <maven-plugin-api.version>3.6.0</maven-plugin-api.version>
     <maven-project.version>3.0-alpha-2</maven-project.version>
@@ -136,6 +137,11 @@
       <artifactId>maven-plugin-annotations</artifactId>
       <version>${maven-plugin-annotations.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven.shared</groupId>
+      <artifactId>maven-artifact-transfer</artifactId>
+      <version>${maven-artifact-transfer.version}</version>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
