--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.twilio</groupId>
   <artifactId>guardrail-maven-plugin_2.12</artifactId>
-  <version>0.52.2-SNAPSHOT</version>
+  <version>0.53.1</version>
   <packaging>maven-plugin</packaging>
 
   <name>Guardrail Maven Plugin</name>
@@ -49,7 +49,7 @@
     <plexus-utils.version>3.2.0</plexus-utils.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>2.12.8</scala.version>
-    <guardrail.version>0.52.1</guardrail.version>
+    <guardrail.version>0.53.1</guardrail.version>
   </properties>
 
   <profiles>
