--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,33 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-invoker-plugin</artifactId>
+          <version>3.2.1</version>
+          <configuration>
+            <parallelThreads>4</parallelThreads>
+            <projectsDirectory>${project.basedir}/src/it</projectsDirectory>
+            <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
+            <preBuildHookScript>setup</preBuildHookScript>
+            <postBuildHookScript>verify</postBuildHookScript>
+            <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
+            <settingsFile>src/it/settings.xml</settingsFile>
+            <mavenOpts>-Djava.io.tmpdir=${project.build.directory}</mavenOpts>
+            <properties>
+              <guardrail.plugin.version>${project.version}</guardrail.plugin.version>
+              <maven.compiler.source>1.8</maven.compiler.source>
+              <maven.compiler.target>1.8</maven.compiler.target>
+            </properties>
+            <scriptVariables>
+              <projectVersion>${project.version}</projectVersion>
+            </scriptVariables>
+            <goals>
+              <goal>install</goal>
+              <goal>run</goal>
+            </goals>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
