--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 8
+        server-id: ossrh
         gpg-private-key: ${{ secrets.PGP_SECRET }}
         gpg-passphrase: PGP_PASSPHRASE
         server-username: SONATYPE_USERNAME
