--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v2
       with:
+        distribution: 'zulu'
         java-version: 8
         server-id: ossrh
         gpg-private-key: ${{ secrets.PGP_SECRET }}
