--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>dev.guardrail</groupId>
   <artifactId>guardrail-maven-plugin</artifactId>
-  <version>0.65.2-SNAPSHOT</version>
+  <version>0.65.2</version>
   <packaging>maven-plugin</packaging>
 
   <name>Guardrail Maven Plugin</name>
