--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,7 @@
               <maven.compiler.target>1.8</maven.compiler.target>
             </properties>
             <scriptVariables>
-              <projectVersion>${project.version}</projectVersion>
+              <projectVersion>0.0.1-SNAPSHOT</projectVersion>
             </scriptVariables>
             <goals>
               <goal>install</goal>
