--- a/pom.xml
+++ b/pom.xml
@@ -302,7 +302,8 @@
               <maven.compiler.target>1.8</maven.compiler.target>
             </properties>
             <scriptVariables>
-              <projectVersion>0.0.1-SNAPSHOT</projectVersion>
+              <projectVersion>0.0.1</projectVersion>
+              <shortRef>${git.commit.short}</shortRef>
             </scriptVariables>
             <goals>
               <goal>install</goal>
