--- a/pom.xml
+++ b/pom.xml
@@ -181,38 +181,53 @@
          letting the user specify which modules they want, to cut down on version churn -->
     <dependency>
       <groupId>dev.guardrail</groupId>
-      <artifactId>guardrail_2.12</artifactId>
-      <version>0.70.0</version>
+      <artifactId>guardrail-core_2.12</artifactId>
+      <version>0.74.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
-      <artifactId>guardrail-cli_2.12</artifactId>
-      <version>0.68.0</version>
+      <artifactId>guardrail-java-async-http_2.12</artifactId>
+      <version>0.71.0</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.guardrail</groupId>
+      <artifactId>guardrail-java-support_2.12</artifactId>
+      <version>0.72.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
       <artifactId>guardrail-java-dropwizard_2.12</artifactId>
-      <version>0.68.0</version>
+      <version>0.71.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
       <artifactId>guardrail-java-spring-mvc_2.12</artifactId>
-      <version>0.68.0</version>
+      <version>0.71.0</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.guardrail</groupId>
+      <artifactId>guardrail-scala-support_2.12</artifactId>
+      <version>0.74.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
       <artifactId>guardrail-scala-akka-http_2.12</artifactId>
-      <version>0.70.0</version>
+      <version>0.74.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
       <artifactId>guardrail-scala-dropwizard_2.12</artifactId>
-      <version>0.68.0</version>
+      <version>0.71.0</version>
     </dependency>
     <dependency>
       <groupId>dev.guardrail</groupId>
       <artifactId>guardrail-scala-http4s_2.12</artifactId>
-      <version>0.70.0</version>
+      <version>0.74.0</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.guardrail</groupId>
+      <artifactId>guardrail-cli_2.12</artifactId>
+      <version>0.71.0</version>
     </dependency>
   </dependencies>
 
