--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch: {}
 
 jobs:
   build:
@@ -12,34 +13,7 @@ jobs:
       matrix:
         java: [ '8' ]
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: ${{ matrix.java }}
-    - name: print Java version
-      run: java -version
-    - uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Guess next version based on the library version
-      id: guessversion
-      run: |
-        source scripts/next-version.sh
-        echo "::set-output name=exists::${exists}"
-        echo "VERSION=${version}" >> $GITHUB_ENV
     - name: Publish release notes
-      if: steps.guessversion.outputs.exists == 0
       uses: release-drafter/release-drafter@v5
-      with:
-        name: "v${{ env.VERSION }}"
-        tag: "v${{ env.VERSION }}"
-        version: "v${{ env.VERSION }}"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
