--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,10 +35,14 @@ jobs:
       run: |
         if [[ "$GITHUB_REF" = refs/heads/* ]]; then
             export VERSIONING_GIT_BRANCH=${GITHUB_REF#refs/heads/};
+            exit 1
         elif [[ "$GITHUB_REF" = refs/tags/* ]]; then
-            export VERSIONING_GIT_TAG=${GITHUB_REF#refs/tags/};
+            export VERSIONING_GIT_TAG=${GITHUB_REF#refs/tags/v};
+            mvn versions:set -DgenerateBackupPoms=false -DnewVersion=$VERSIONING_GIT_TAG
         elif [[ "$GITHUB_REF" = refs/pull/*/merge ]]; then
-            export VERSIONING_GIT_BRANCH=${GITHUB_REF#refs/};
-            VERSIONING_GIT_BRANCH=${VERSIONING_GIT_BRANCH%/merge};
+            VERSIONING_GIT_BRANCH=${GITHUB_REF#refs/};
+            export VERSIONING_GIT_BRANCH=${VERSIONING_GIT_BRANCH%/merge};
+            exit 1
         fi
         mvn -B --no-transfer-progress clean deploy -Possrh
+        git checkout pom.xml
