--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>dev.guardrail</groupId>
   <artifactId>guardrail-maven-plugin</artifactId>
-  <version>0.66.0</version>
+  <version>0.0.0</version>  <!-- Overridden by version:set pre-deploy -->
   <packaging>maven-plugin</packaging>
 
   <name>guardrail-maven-plugin</name>
