--- a/src/it/codegen-scala/pom.xml
+++ b/src/it/codegen-scala/pom.xml
@@ -143,6 +143,13 @@
         <groupId>dev.guardrail</groupId>
         <artifactId>guardrail-maven-plugin</artifactId>
         <version>${guardrail.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>dev.guardrail</groupId>
+            <artifactId>guardrail-scala-akka-http_2.13</artifactId>
+            <version>1.0.0-M1</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>generate-petstore-client</id>
