--- a/src/it/codegen-spring-mvc-java/pom.xml
+++ b/src/it/codegen-spring-mvc-java/pom.xml
@@ -165,6 +165,18 @@
         <groupId>dev.guardrail</groupId>
         <artifactId>guardrail-maven-plugin</artifactId>
         <version>${guardrail.plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>dev.guardrail</groupId>
+            <artifactId>guardrail-java-spring-mvc_2.13</artifactId>
+            <version>1.0.0-M1</version>
+          </dependency>
+          <dependency>
+            <groupId>dev.guardrail</groupId>
+            <artifactId>guardrail-java-async-http_2.13</artifactId>
+            <version>1.0.0-M1</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>generate-petstore-spring-mvc-server</id>
