--- a/pom.xml
+++ b/pom.xml
@@ -188,21 +188,19 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>4.6.3</version>
+        <version>4.8.1</version>
         <configuration>
           <recompileMode>incremental</recompileMode>
           <args>
             <arg>-unchecked</arg>
             <arg>-deprecation</arg>
             <arg>-feature</arg>
-            <arg>-Xexperimental</arg>
           </args>
-          <charset>UTF-8</charset>
           <compilerPlugins>
             <compilerPlugin>
-              <groupId>org.spire-math</groupId>
-              <artifactId>kind-projector_${scala.compat.version}</artifactId>
-              <version>0.9.4</version>
+              <groupId>org.typelevel</groupId>
+              <artifactId>kind-projector_${scala.version}</artifactId>
+              <version>0.13.2</version>
             </compilerPlugin>
           </compilerPlugins>
         </configuration>
